  gtk/crossfire-client.desktop
  gtk/config.c
  gtk/gx11.c
  gtk/win32/config.h
  gtk/crossfire-client-gtk.man
Add -popups to the default startup options as a partial workaround for
Bug #2022488 2.x GTKv1 client built --enable-cfgtk2 cannot login.
  gtk/crossfire-client.desktop
Spelling, capitalization, and some whitespace modifications.  No functional
code changes.
  gtk/gx11.c
  common/init.c
Kevin Bulgrien 2008-07-19

common/newsocket.c: Improve error message (print out actual error) on failed
write.  Also, try to write again on errno==EAGAIN - fixes problem for systems
that return EAGAIN instead of 0 when a write fails on a non blocking device.
MSW 2008-07-07

Allow scripts to retrieve information that was previously unavailable: tag of
the player object (used in move commands), title, list of known spells, names
of the known skills, and attuned/repelled/denied spell paths.
 common/script.c
Raphael Quinet 2008-06-22

Clean up configure.ac and add a missing test for size_t.
 configure.ac
 common/config.h.in
Arvid Norlander 2008-06-05

Fix a valgrind error (uninitialised value) in smoothing code.
 gtk-v2/src/config.c
 gtk-v2/src/map.c
Arvid Norlander 2008-06-03

Fix a valgrind error in the common metaserver code. For some reason sc_version
and cs_version fields were not always properly initialized when check_server_version()
was called.
 common/metaserver.c
Arvid Norlander 2008-06-03

Add stub support for sound2/music commands, I was unable to make server send
the actual commands except "music NONE" (and jxclient that do have sounds don't
get these commands either, but decides locally to play some sounds it seems) so
was not able to debug it beyond making sure it compiled and ran. When the server
actually sends these commands someone need to fill in the implementations and
check the parsing code is correct for sound2.
 gtk/gtkproto.h
 gtk/sound.c
 common/commands.c
 common/client.c
 common/external.h
 x11/x11proto.h
 x11/sound.c
 gtk-v2/src/gtk2proto.h